--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@remix-run/react": "^1.6.7",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-page-slides": "^0.1.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
